--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <svg viewBox="0 0 100 80" width="40" height="40">
-      <rect width="100" height="20" rx="8"></rect>
-      <rect y="30" width="100" height="20" rx="8"></rect>
-      <rect y="60" width="100" height="20" rx="8"></rect>
-    </svg>
+    <header class="header">
+      <svg class="header__burger" viewBox="0 0 100 80" width="40" height="40">
+        <rect width="100" height="20" rx="8"></rect>
+        <rect y="30" width="100" height="20" rx="8"></rect>
+        <rect y="60" width="100" height="20" rx="8"></rect>
+      </svg>
+    </header>
+    <menu class="header__menu">
+      <nav class="header__nav">
+        <li><a href="#">Главная</a></li>
+        <li><a href="#">О нас</a></li>
+        <li><a href="#">Контакты</a></li>
+      </nav>
+    </menu>
+
+    <script src="/script.js"></script>
   </body>
 </html>
