--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
   </head>
   <body>
     <header class="header">
-      <svg class="header__burger" viewBox="0 0 100 80" width="40" height="40">
+      <button class="header__button" ><svg viewBox="0 0 100 80" width="40" height="40">
         <rect width="100" height="20" rx="8"></rect>
         <rect y="30" width="100" height="20" rx="8"></rect>
         <rect y="60" width="100" height="20" rx="8"></rect>
-      </svg>
+      </svg></button>
     </header>
-    <menu class="header__menu">
-      <nav class="header__nav">
+    <ul class="header__menu">
+
         <li><a href="#">Главная</a></li>
         <li><a href="#">О нас</a></li>
         <li><a href="#">Контакты</a></li>
       </nav>
-    </menu>
+    </ul>
 
     <script src="script.js"></script>
   </body>
